# honkai-star-rail-character-stats-analysis

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto.yml  web-test.yml
calculator/: plot_eidolon_value.py  value_calculator.py
data/: castorice.json
docs/: CHARACTER_VISUALS.md  VISUALS.md
docs/character_visuals/: ANAXA.md  CASTORICE.md  RUAN_MEI.md
hsr_simulations/: Makefile  main.py
hsr_simulations/data_output/: all_avg_dmg.csv  all_dmg_per_pull.csv  all_marginal_value.csv
hsr_simulations/data_output/Anaxa/: Anaxa_avg_dmg.csv  Anaxa_dmg_per_pull.csv  Anaxa_marginal_value.csv
hsr_simulations/data_output/Castorice/: Castorice_avg_dmg.csv  Castorice_dmg_per_pull.csv  Castorice_marginal_value.csv
hsr_simulations/simulations/: data_transformer.py  logger_config.py
hsr_simulations/tests/: test_combine_metric_csvs.py  test_export_metric_to_csv.py
scraper/: constants.py  scraper.py
simulations/: logger_config.py  simulation.py
simulations/characters/: base_character.py  ruan_mei.py
simulations/characters/erudition/: anaxa.py
simulations/visuals/: plot_eidolon_value.py
visual_dashboard/: Makefile  package-lock.json  package.json  vitest.config.ts
visual_dashboard/__tests__/: constants.test.ts  error-handling.test.tsx  layout.test.tsx  setup.ts  useChartData.test.tsx
visual_dashboard/tests/: anaxa.test.tsx  character-pages.test.tsx  constants.test.ts  dashboard.test.tsx  home.test.tsx  hyacine.test.tsx  layout.test.tsx  navigation.test.tsx  setup.ts  useChartData.test.tsx
(+65 files in other folders)
